--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/omelette.html">Omelette Recipe</a>
-    <a href="recipes/chicken.html">Chicken Recipe</a>
-    <a href="recipes/coffee.html">Homemade Coffee Recipe</a>
+    <img src="recipes/chef.jpg" alt="chef pic" width="300px">
+    <h2>My favourite recipe</h2>
+    <ul>
+        <li><a href="recipes/omelette.html">Omelette Recipe</a></li>
+        <li><a href="recipes/chicken.html">Chicken Recipe</a></li>
+        <li><a href="recipes/coffee.html">Homemade Coffee Recipe</a></li>
+    </ul>
 
 </body>
 
