Added links to each recipe

--- a/recipes/coffee.html
+++ b/recipes/coffee.html
@@ -21,5 +21,10 @@
 
         </li>
     </ol>
+    <h2>Other Recipes</h2>
+    <ul>
+        <li><a href="recipes/chicken.html">Chicken Recipe</a></li>
+        <li><a href="recipes/chicken.html">Chicken Recipe</a></li>
+      </ul>
 </body>
 </html>
