--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -23,6 +23,7 @@
         <li>Melt butter in a small, nonstick skillet over medium-low heat. Pour in egg mixture and swirl the skillet, so the bottom is evenly covered with egg. Cook until egg starts to set, about 1 minute. Lift edges with a spatula and tilt the skillet so uncooked egg can flow towards the bottom of the skillet to set. Repeat until no visible liquid egg remains.</li>
         <li>Carefully flip omelette; cook until warmed through, 30 seconds to 1 minute. Slide omelette onto a plate. </li>
     </ol>
+    <h2>Other Recipe</h2>
     <ul>
         <li><a href="recipes/chicken.html">Chicken Recipe</a></li>
         <li><a href="recipes/coffee.html">Homemade Coffee Recipe</a></li>
