--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Chicken Recipe</h1>
     <img src="chicken.jpg" alt="spicy chicken" width="200px">
     <h2>Description</h2>
-    <p>This quick Asian-style chicken and green bean stir-fry combines lots of flavorful ingredients. Serve over rice or with a salad, if you prefer.</p>
+    <p>This quick Asian-style chicken and green bean stir-fry combines lots of flavorful ingredients. Serve over rice or
+        with a salad, if you prefer.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>2 tablespoons chili oil (such as Mongolian Fire oil), divided</li>
@@ -27,13 +30,25 @@
         <li>1 pound fresh green beans, trimmed</li>
     </ul>
     <ol>
-        <li>Stir together 1 tablespoon chili oil, 2 tablespoon soy sauce, red pepper flakes, and white pepper in a bowl. Add chicken pieces and mix with marinade. Set aside.</li>
-        <li>Combine remaining 1 tablespoon chili oil and soy sauce, mirin, garlic, ginger, and salt in a small bowl; set sauce aside.</li>
-        <li>Heat 1 tablespoon cooking oil in a large non-stick skillet or wok over medium high heat. Add seasoned chicken pieces and sliced shallots to the hot oil. Cook, stirring frequently, until the chicken is no longer pink at the center and the liquid has started to evaporate, about 8 minutes. Transfer to a bowl and keep warm. </li>
-        <li> Heat remaining tablespoon cooking oil in the same skillet over medium-high heat. Add green beans to hot oil and cook, stirring frequently, until beans turn bright green, about 1 minute. Add sauce and stir to coat beans.
+        <li>Stir together 1 tablespoon chili oil, 2 tablespoon soy sauce, red pepper flakes, and white pepper in a bowl.
+            Add chicken pieces and mix with marinade. Set aside.</li>
+        <li>Combine remaining 1 tablespoon chili oil and soy sauce, mirin, garlic, ginger, and salt in a small bowl; set
+            sauce aside.</li>
+        <li>Heat 1 tablespoon cooking oil in a large non-stick skillet or wok over medium high heat. Add seasoned
+            chicken pieces and sliced shallots to the hot oil. Cook, stirring frequently, until the chicken is no longer
+            pink at the center and the liquid has started to evaporate, about 8 minutes. Transfer to a bowl and keep
+            warm. </li>
+        <li> Heat remaining tablespoon cooking oil in the same skillet over medium-high heat. Add green beans to hot oil
+            and cook, stirring frequently, until beans turn bright green, about 1 minute. Add sauce and stir to coat
+            beans.
         </li>
         <li>Return cooked chicken and shallots to the skillet and stir, about 3 minutes. </li>
-        <li>Stir together chicken base and water in a small bowl; stir in cornstarch to make a slurry. Drizzle slurry into the skillet, stirring quickly. Continue stirring and cooking until pan sauce is slightly thickened. Serve garnished with sesame seeds. </li>
+        <li>Stir together chicken base and water in a small bowl; stir in cornstarch to make a slurry. Drizzle slurry
+            into the skillet, stirring quickly. Continue stirring and cooking until pan sauce is slightly thickened.
+            Serve garnished with sesame seeds. </li>
     </ol>
+
+    <a href="./">Back to homepage</a>
 </body>
+
 </html>
